--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Summerizer</title>
-     <style>
+<html>
+  <head>
+    <title>AI Summary</title>
+    <style>
       body {
         font-family: Arial, sans-serif;
-        min-width: 800px;
+        min-width: 500px;
         min-height: 300px;
         padding: 15px;
       }
@@ -97,29 +94,26 @@
         }
       }
     </style>
-</head>
+  </head>
+  <body>
+    <h2>AI Summary</h2>
 
-<body style="min-width: 300px; padding: 20px; font-family: sans-serif;">
-    <h1>AI Summary</h1>
     <div class="options">
-        <select>
-            <option value="brief">Brief</option>
-            <option value="detailed">Detailed</option>
-
-            <option value="bullets">Bullets Points</option>
-
-        </select>
-
-          <button id="summarize">Summarize</button>
-    <button id="copy-btn">Copy</button>
+      <select id="summary-type">
+        <option value="brief">Brief Summary</option>
+        <option value="detailed">Detailed Summary</option>
+        <option value="bullets">Bullet Points</option>
+      </select>
+      <button id="summarize">Summarize This Page</button>
+      <button id="copy-btn">Copy Summary</button>
     </div>
-  
 
+    <div id="result">
+      Select a summary type and click 'Summarize This Page' to generate a
+      summary.
+    </div>
 
-    <pre id="result">Select a type and click summarize</pre>
-
-
-
-</body>
-
+    <script src="config.js"></script>
+    <script src="popup.js"></script>
+  </body>
 </html>
